samples/_failures_safe/1761491760_dba0b5_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_54667802.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_54667802.c:150:9: error: expected declaration or statement at end of input
  150 |         token->value[1] = '\0';
      |         ^~~~~
./samples/SAFE/__tmp_54667802.c:150:9: error: expected declaration or statement at end of input
